--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
