--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
+    "react-lottie": "^1.2.3",
     "react-moment": "^1.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
+    "react-router-hash-link": "^2.4.3",
     "sort-by": "^1.2.0",
     "swiper": "^10.0.4"
   },
